src/app.css
:root,
:root.light {
  --primary-color: white;
  --secondary-color: #efefef;
  --background-color-secondary: linear-gradient(#f2f2f2, white);
  --text-color: #383838;
  --border-color-hover: #646cff;
}

:root.dark {
  --primary-color: #1f1f1f;
  --secondary-color: #efefef;
  --background-color-secondary: linear-gradient(#1f1f1f, #383838);
  --text-color: #ececec;
  --border-color-hover: #646cff;
}

body {
  margin: 0;
  font-family: sans-serif;
}

